--- a/index.html
+++ b/index.html
@@ -7,43 +7,60 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Bootstrap CSS from CDN -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-
     <!-- link to custom stylesheet (always require after Bootstrap) -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 
     <!-- jQuery from CDN -->
-
-
     <!-- link to custom javascript file (always require after external JS libraries) -->
+    <script type="text/javascript" src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.js'></script>
+    <script type="text/javascript" src='js/app.js'></script>
 
-    <title>Tic Tac Toe</title>
+    <!-- Lobster Font and Star Wars Font Reference stylesheets -->
+    <link href="http://fonts.googleapis.com/css?family=Lobster" rel="stylesheet" type="text/css">
+
+    <title>Ralph Lisa Ralph</title>
   </head>
   <body>
-    <div class="container">
-      <div class="row text-center">
-        <div class="col-md-12">
-          <h1>Tic Tac Toe</h1>
-          <hr>
-        </div>
-      </div>
-      <div class="row">
-
-        <!-- a column represents our game board -->
-        <!-- the `offset` class helps us center the board -->
-        <div class="col-md-6 col-md-offset-3" id="board">
-
-          <!-- you can put rows inside of columns! -->
-          <!-- Bootstrap subdivides these 'nested' rows into 12 columns, too! -->
-          <div class="row">
-            <div class="col-md-4 box">a</div>
-            <div class="col-md-4 box">a</div>
-            <div class="col-md-4 box">a</div>
+    <embed src="http://www.talkingwav.com/simpsons_songs/simpsong_01.wav"
+    loop="true"
+    autoplay="true"
+    width="0"
+    height="0">
+    </embed>
+      <div class="container" id="radial-gradient">
+        <div class="row text-center">
+          <div class="col-md-12">
+            <h1 id="simpsons">Ralph Lisa Ralph</h1>
+            <hr>
           </div>
+        </div>
+        <div class="row">
 
+          <div class="col-lg-12  col-lg-offset-3 col-md-offset-3 col-sm-offset-2 col-xs-offset-2" id="board">
 
+            <div class="row">
+              <div class="box col-lg-12 col-md-4 col-sm-4 col-xs-4" id="box1"></div>
+              <div class="box col-lg-12 col-md-4 col-sm-4 col-xs-4" id="box2"></div>
+              <div class="box col-lg-12 col-md-4 col-sm-4 col-xs-4" id="box3"></div>
+            </div>
 
+            <div class="row">
+              <div class="box col-lg-4 col-md-4 col-sm-4 col-xs-4" id="box4"></div>
+              <div class="box col-lg-4 col-md-4 col-sm-4 col-xs-4" id="box5"></div>
+              <div class="box col-lg-4 col-md-4 col-sm-4 col-xs-4" id="box6"></div>
+            </div>
+
+            <div class="row">
+              <div class="box col-lg-4 col-md-4 col-sm-4 col-xs-4" id="box7"></div>
+              <div class="box col-lg-4 col-md-4 col-sm-4 col-xs-4" id="box8"></div>
+              <div class="box col-lg-4 col-md-4 col-sm-4 col-xs-4" id="box9"></div>
+            </div>
+
+            <button type="button" class="btn btn-block" id="yellowbutton">Reset</button>
+
+          </div>
         </div>
       </div>
-    </div>
-  </body>
-</html>
+    </body>
+    </html>
