--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
     <link href="http://fonts.googleapis.com/css?family=Lobster" rel="stylesheet" type="text/css">
 
     <title>Ralph Lisa Ralph</title>
+
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
   </head>
   <body>
     <embed src="http://www.talkingwav.com/simpsons_songs/simpsong_01.wav"
