--- a/index.html
+++ b/index.html
@@ -16,30 +16,23 @@
     <script type="text/javascript" src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.js'></script>
     <script type="text/javascript" src='js/app.js'></script>
 
-    <!-- Lobster Font and Star Wars Font Reference stylesheets -->
-    <link href="http://fonts.googleapis.com/css?family=Lobster" rel="stylesheet" type="text/css">
-
-    <title>Ralph Lisa Ralph</title>
+    <title>Tic Tac Toe</title>
 
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
   </head>
   <body>
-    <embed src="http://www.talkingwav.com/simpsons_songs/simpsong_01.wav"
-    loop="true"
-    autoplay="true"
-    width="0"
-    height="0">
-    </embed>
       <div class="container" id="radial-gradient">
         <div class="row text-center">
           <div class="col-md-12">
-            <h1 id="simpsons">Ralph Lisa Ralph</h1>
+            <audio controls>
+            <source src="http://www.talkingwav.com/simpsons_songs/simpsong_01.wav" type="audio/wav"></audio>
+            <h1 id="simpsons">Tic Tac Toe</h1>
             <hr>
           </div>
         </div>
         <div class="row">
 
-          <div class="col-lg-12  col-lg-offset-3 col-md-offset-3 col-sm-offset-2 col-xs-offset-2" id="board">
+          <div class="col-lg-12 col-lg-offset-3" id="board">
 
             <div class="row">
               <div class="box col-lg-12 col-md-4 col-sm-4 col-xs-4" id="box1"></div>
